<resources>
    <string name="app_name">Cloud DRM ExoPlayer Kotlin</string>

    <string name="hint_url">URL</string>
    <string name="hint_drm_license_url">DRM License URL</string>
    <string name="hint_brand_guid">Tenant ID</string>
    <string name="hint_user_token">User Token</string>

    <string name="play">Play</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_downloaded">Delete downloaded</string>
    <string name="try_again">Try again</string>
    <string name="play_offline">Play offline</string>

    <string name="empty_field">This field cannot be empty.</string>
    <string name="field_incorrect_length">Incorrect length, must be 36.</string>
    <string name="field_incorrect_url">Incorrect URL format, must start with http:// or https://.</string>

    <string name="acquiring_drm_license">Acquiring DRM license…</string>
    <string name="downloading">Downloading…</string>
    <string name="waiting">Waiting…</string>
    <string name="removing">Removing video…</string>
    <string name="checking_downloaded_files">Checking downloaded files…</string>
    <string name="download_completed">Download completed. Saving…</string>
    <string name="download_error">Download error.</string>
    <string name="download_stop">Download stopped.</string>

    <string name="download_notification_channel_name">Downloads</string>
    <string name="download_notification_channel_description">Displays the download progress.</string>

    <string name="no_downloaded_videos">No downloaded videos.</string>
    <string name="downloaded_videos">Downloaded videos</string>

    <string name="drm_error_403">DRM Error: Invalid User Token (403).</string>
    <string name="drm_error_401">DRM Error: Invalid Tenant ID (401).</string>
    <string name="drm_error_404">DRM Error: License Server not found (404).</string>
    <string name="drm_server_error">DRM Server Error: %1$d</string>
    <string name="drm_error">DRM Error: %1$s</string>
    <string name="video_url_error">Video URL Error: %1$d</string>
    <string name="playback_error">Playback error: %1$s</string>
    <string name="format_error">Format Error: Server returned something else than DASH.</string>
    <string name="cannot_find_drm_format">Cannot find DRM format. Check Media URL or manifest.</string>
    <string name="server_error">Server returned error code: %1$d</string>
    <string name="invalid_url_or_no_internet_connection">Invalid URL or no internet connection.</string>
    <string name="unexpected_error">Unexpected error: %1$s</string>
</resources>